--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,8 +1,8 @@
 {
 	"name" : "Learn helper",
-	"version":"1.2",
+	"version":"1.3",
 	"manifest_version" : 2,
-	"description":"修复网络学堂在Chrome下的排版问题",
+	"description":"添加网络学堂Deadline查询功能，修复网络学堂在Chrome下的排版问题",
 	"content_scripts":[
 		{
 			"matches": [
