--- a/src/manifest.json
+++ b/src/manifest.json
@@ -25,13 +25,12 @@
 	"permissions" : ["*://learn.tsinghua.edu.cn/*", "tabs"],
 	"options_page": "exception.html",
 	"icons": {
-		"16" : "L48.png",
-		"48" : "L48.png",
-		"128" : "L128.png"
+		"16" : "icons/16.png",
+		"128" : "icons/128.png"
 	},
 	"browser_action": {
-		"default_icon": "L48.png",           // 可选
-		"default_title": "learn",      // 可选，在工具提示中显示
+		"default_icon": "icons/16.png",
+		"default_title": "Learn Helper",
 		"default_popup" : "popup.html"
 	},
 	"web_accessible_resources":["learn.inject.js"]
