--- a/src/manifest.json
+++ b/src/manifest.json
@@ -26,10 +26,11 @@
 	"options_page": "exception.html",
 	"icons": {
 		"16" : "icons/16.png",
+		"48" : "icons/48.png",
 		"128" : "icons/128.png"
 	},
 	"browser_action": {
-		"default_icon": "icons/16.png",
+		"default_icon": "icons/19.png",
 		"default_title": "Learn Helper",
 		"default_popup" : "popup.html"
 	},
