--- a/src/manifest.json
+++ b/src/manifest.json
@@ -20,7 +20,7 @@
 		}
 	],
 	"background" : {
-		"scripts" : ["js/jquery-1.9.1.min.js", "js/utils.js", "js/sjcl.js", "js/html-domparser.js", "background.js"]
+		"scripts" : ["js/jquery-1.9.1.min.js", "js/utils.js", "js/sjcl.js", "js/html-domparser.js", "const.js", "background.js"]
 	},
 	"permissions" : ["storage", "*://learn.tsinghua.edu.cn/*", "tabs", "*://thudev.sinaapp.com/*"],
 	"icons": {
