--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
 	"name" : "Learn helper",
-	"version":"2.2.1",
+	"version":"2.3",
 	"manifest_version" : 2,
 	"description":"漂亮的网络学堂，离线缓存数据，修复网络学堂在Chrome下的排版问题",
 	"content_scripts":[
@@ -20,7 +20,7 @@
 		}
 	],
 	"background" : {
-		"scripts" : ["js/jquery-1.9.1.min.js", "js/utils.js", "js/sjcl.js", "js/html-domparser.js", "const.js", "background.js"]
+		"scripts" : ["js/jquery-1.9.1.min.js", "js/utils.js", "js/sjcl.js", "js/html-domparser.js", "js/coffee/const.js", "js/coffee/background.js"]
 	},
 	"permissions" : ["storage", "*://learn.tsinghua.edu.cn/*", "tabs", "*://thudev.sinaapp.com/*"],
 	"icons": {
