--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "Learn_Helper",
   "version": "3.3.1",
-  "author" : {
-	  "name" : "xxr3376"
+  "author": {
+    "name": "xxr3376"
   },
-  "main" : "Gruntfile.js",
+  "main": "Gruntfile.js",
   "devDependencies": {
     "iced-coffee-script": "~1.4.0",
     "grunt": "~0.4.1",
@@ -15,12 +15,12 @@
     "stylus": "~0.37.0",
     "grunt-contrib-stylus": "~0.8.0",
     "grunt-contrib-copy": "~0.4.1",
-    "grunt-contrib-watch": "~0.5.2"
+    "grunt-contrib-watch": "~0.5.2",
+    "grunt-contrib-coffee": "~0.9.0"
   },
-  "repository" :
-  {
-	  "type" : "git",
-	  "url" : "https://github.com/xxr3376/Learn-Project"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/xxr3376/Learn-Project"
   },
   "licenses": [
     {
