--- a/src/manifest.json
+++ b/src/manifest.json
@@ -23,7 +23,7 @@
 			"matches" :[
 				"*://learn.tsinghua.edu.cn/MultiLanguage/public/bbs/*"
 			],
-			"js" : ["js/jquery-1.9.1.min.js", "bbsFix.js"],
+			"js" : ["bbsFix.js"],
 			"all_frames" : true
 		},
 		{
@@ -35,7 +35,7 @@
 
 	],
 	"background" : {
-		"scripts" : ["js/jquery-1.9.1.min.js", "js/utils.js", "js/sjcl.js", "js/html-domparser.js", "js/const.js", "js/background.js"]
+		"scripts" : ["js/vendor/require.js", "js/config.js", "js/background.js"]
 	},
 	"permissions" : ["storage", "*://learn.tsinghua.edu.cn/*", "tabs", "*://thudev.sinaapp.com/*"],
 	"icons": {
