Update project introduction
Signed-off-by: Harry Chen <i@harrychen.xyz>

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Learn_Helper",
-  "version": "2019.1.1",
+  "name": "learn-helper",
+  "version": "4.0.0",
   "author": "xxr3376 & Harry Chen",
   "license": "MIT",
   "repository": {
