--- a/package.json
+++ b/package.json
@@ -11,14 +11,16 @@
     "build": "webpack --config webpack.prod.js",
     "dev": "webpack --config webpack.dev.js",
     "watch": "webpack -w --config webpack.dev.js",
+    "start": "webpack-dev-server --config webpack.dev.js --open",
     "lint": "tslint 'src/**/*.{ts, tsx}'"
   },
   "devDependencies": {
-    "@types/react-redux": "^7.0.1",
     "@types/chrome": "^0.0.78",
     "@types/react": "^16.0.40",
     "@types/react-dom": "^16.0.4",
+    "@types/react-redux": "^7.0.1",
     "css-loader": "^2.1.0",
+    "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.7.2",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
@@ -29,9 +31,16 @@
     "typescript": "^3.0.2",
     "webpack": "^4.1.1",
     "webpack-cli": "^3.1.1",
+    "webpack-dev-server": "^3.1.14",
     "webpack-merge": "^4.1.4"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.12",
+    "@fortawesome/free-solid-svg-icons": "^5.6.3",
+    "@fortawesome/react-fontawesome": "^0.1.4",
+    "@material-ui/core": "^3.9.1",
+    "@material-ui/icons": "^3.0.2",
+    "@material-ui/styles": "^3.0.0-alpha.9",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^6.0.0",
