--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@material-ui/styles": "^3.0.0-alpha.9",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-iframe": "^1.3.3",
     "react-redux": "^6.0.0",
     "redux": "^4.0.1"
   }
