--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@material-ui/core": "^3.9.1",
     "@material-ui/icons": "^3.0.2",
     "@material-ui/styles": "^3.0.0-alpha.9",
+    "classnames": "^2.2.6",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-iframe": "^1.3.3",
