Manual tree-shake to minify code size
Signed-off-by: Harry Chen <i@harrychen.xyz>

--- a/package.json
+++ b/package.json
@@ -15,31 +15,31 @@
     "lint": "tslint 'src/**/*.{ts, tsx}'"
   },
   "devDependencies": {
-    "@types/chrome": "^0.0.78",
-    "@types/react": "^16.0.40",
-    "@types/react-dom": "^16.0.4",
-    "@types/react-redux": "^7.0.1",
-    "css-loader": "^2.1.0",
-    "html-webpack-plugin": "^3.2.0",
-    "node-sass": "^4.7.2",
-    "sass-loader": "^7.1.0",
-    "style-loader": "^0.23.1",
-    "ts-loader": "^5.3.3",
-    "tslint": "^5.0.0",
-    "tslint-config-airbnb": "^5.11.1",
-    "tslint-react": "^3.6.0",
-    "typescript": "^3.0.2",
-    "webpack": "^4.1.1",
-    "webpack-cli": "^3.1.1",
-    "webpack-dev-server": "^3.1.14",
-    "webpack-merge": "^4.1.4"
+    "@types/chrome": "latest",
+    "@types/react": "latest",
+    "@types/react-dom": "latest",
+    "@types/react-redux": "latest",
+    "css-loader": "latest",
+    "html-webpack-plugin": "latest",
+    "node-sass": "latest",
+    "sass-loader": "latest",
+    "style-loader": "latest",
+    "ts-loader": "latest",
+    "tslint": "latest",
+    "tslint-config-airbnb": "latest",
+    "tslint-react": "latest",
+    "typescript": "latest",
+    "webpack": "latest",
+    "webpack-bundle-analyzer": "latest",
+    "webpack-cli": "latest",
+    "webpack-dev-server": "latest",
+    "webpack-merge": "latest"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.12",
     "@fortawesome/free-solid-svg-icons": "^5.6.3",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@material-ui/core": "^3.9.1",
-    "@material-ui/icons": "^3.0.2",
     "@material-ui/styles": "^3.0.0-alpha.9",
     "classnames": "^2.2.6",
     "react": "^16.2.0",
