Use CSS modules instead of  CSS in JS
Signed-off-by: Harry Chen <i@harrychen.xyz>

--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
   },
   "devDependencies": {
     "@types/chrome": "latest",
+    "@types/node": "^10.12.19",
     "@types/react": "latest",
     "@types/react-dom": "latest",
     "@types/react-redux": "latest",
-    "css-loader": "latest",
+    "css-loader": "^1.0.1",
     "html-webpack-plugin": "latest",
     "node-sass": "latest",
     "sass-loader": "latest",
@@ -29,6 +30,7 @@
     "tslint-config-airbnb": "latest",
     "tslint-react": "latest",
     "typescript": "latest",
+    "typings-for-css-modules-loader": "^1.7.0",
     "webpack": "latest",
     "webpack-bundle-analyzer": "latest",
     "webpack-cli": "latest",
