--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "url": "https://github.com/xxr3376/Learn-Project"
   },
   "scripts": {
+    "format": "prettier --write \"src/**/*.ts\" \"src/**/*.tsx\" \"src/**/*.js\"",
     "build": "webpack --config webpack.prod.js",
     "dev": "webpack --config webpack.dev.js",
     "watch": "webpack -w --config webpack.dev.js",
@@ -23,6 +24,7 @@
     "css-loader": "^1.0.1",
     "html-webpack-plugin": "latest",
     "node-sass": "latest",
+    "prettier": "^1.16.4",
     "sass-loader": "latest",
     "style-loader": "latest",
     "ts-loader": "latest",
@@ -48,6 +50,7 @@
     "react-dom": "^16.2.0",
     "react-iframe": "^1.3.3",
     "react-redux": "^6.0.0",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "thu-learn-lib": "^1.0.3"
   }
 }
