--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "4.0.0",
   "author": "xxr3376 & Harry Chen",
   "license": "MIT",
+  "private": true,
   "repository": {
     "type": "git",
     "url": "https://github.com/xxr3376/Learn-Project"
@@ -51,6 +52,6 @@
     "react-iframe": "^1.3.3",
     "react-redux": "^6.0.0",
     "redux": "^4.0.1",
-    "thu-learn-lib": "^1.0.3"
+    "thu-learn-lib": "^1.0.4"
   }
 }
