--- a/package.json
+++ b/package.json
@@ -52,6 +52,10 @@
     "react-iframe": "^1.3.3",
     "react-redux": "^6.0.0",
     "redux": "^4.0.1",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^5.10.0",
+    "redux-persist-chrome-storage": "^1.0.1",
+    "redux-thunk": "^2.3.0",
     "thu-learn-lib": "^1.0.4"
   }
 }
