--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@material-ui/core": "^3.9.1",
     "@material-ui/styles": "^3.0.0-alpha.9",
     "classnames": "^2.2.6",
+    "immutable": "^4.0.0-rc.12",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-iframe": "^1.3.3",
@@ -55,7 +56,8 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^5.10.0",
     "redux-persist-chrome-storage": "^1.0.1",
+    "redux-persist-transform-immutable": "^5.0.0",
     "redux-thunk": "^2.3.0",
-    "thu-learn-lib": "^1.0.8"
+    "thu-learn-lib": "^1.0.9"
   }
 }
