Extract ColoredSnackbar anand refactor
Signed-off-by: Harry Chen <i@harrychen.xyz>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
         "jsx": "react",
         "experimentalDecorators": true,
         "allowSyntheticDefaultImports": true,
-        "esModuleInterop": true
+        "esModuleInterop": true,
+        "noImplicitThis": true
     }
 }
