--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@types/chrome": "latest",
+    "@types/classnames": "^2.2.7",
     "@types/node": "^10.12.19",
     "@types/react": "latest",
     "@types/react-dom": "latest",
