--- a/package.json
+++ b/package.json
@@ -17,29 +17,29 @@
     "lint": "tslint 'src/**/*.{ts, tsx}'"
   },
   "devDependencies": {
-    "@types/chrome": "latest",
+    "@types/chrome": "^0.0.78",
     "@types/classnames": "^2.2.7",
     "@types/node": "^10.12.19",
-    "@types/react": "latest",
-    "@types/react-dom": "latest",
-    "@types/react-redux": "latest",
+    "@types/react": "^16.7.22",
+    "@types/react-dom": "^16.0.11",
+    "@types/react-redux": "^7.0.1",
     "css-loader": "^1.0.1",
-    "html-webpack-plugin": "latest",
-    "node-sass": "latest",
+    "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.11.0",
     "prettier": "^1.16.4",
-    "sass-loader": "latest",
-    "style-loader": "latest",
-    "ts-loader": "latest",
-    "tslint": "latest",
-    "tslint-config-airbnb": "latest",
-    "tslint-react": "latest",
-    "typescript": "latest",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "ts-loader": "^5.3.3",
+    "tslint": "^5.12.1",
+    "tslint-config-airbnb": "^5.11.1",
+    "tslint-react": "^3.6.0",
+    "typescript": "^3.2.4",
     "typings-for-css-modules-loader": "^1.7.0",
-    "webpack": "latest",
-    "webpack-bundle-analyzer": "latest",
-    "webpack-cli": "latest",
-    "webpack-dev-server": "latest",
-    "webpack-merge": "latest"
+    "webpack": "^4.29.0",
+    "webpack-bundle-analyzer": "^3.0.3",
+    "webpack-cli": "^3.2.1",
+    "webpack-dev-server": "^3.1.14",
+    "webpack-merge": "^4.2.1"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.12",
@@ -59,6 +59,6 @@
     "redux-persist-chrome-storage": "^1.0.1",
     "redux-persist-transform-immutable": "^5.0.0",
     "redux-thunk": "^2.3.0",
-    "thu-learn-lib": "^1.0.10"
+    "thu-learn-lib": "^1.0.11"
   }
 }
