--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@types/chrome": "^0.0.78",
     "@types/classnames": "^2.2.7",
+    "@types/lodash": "^4.14.121",
     "@types/node": "^10.12.19",
     "@types/react": "^16.7.22",
     "@types/react-dom": "^16.0.11",
@@ -49,6 +50,7 @@
     "@material-ui/styles": "^3.0.0-alpha.9",
     "classnames": "^2.2.6",
     "immutable": "^4.0.0-rc.12",
+    "lodash": "^4.17.11",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-iframe": "^1.3.3",
