--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
-        "target": "ES2016",
-        "module": "ES6",
+        "target": "es2017",
+        "module": "commonjs",
         "moduleResolution": "node",
         "rootDir": "src",
         "outDir": "dist/js",
