--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "css-loader": "^1.0.1",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.11.0",
+    "null-loader": "^0.1.1",
     "prettier": "^1.16.4",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
