Switch to yarn and upgrade packages
Signed-off-by: Harry Chen <i@harrychen.xyz>

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "learn-helper",
-  "version": "4.0.2",
+  "version": "4.0.3",
   "author": "xxr3376 & Harry Chen",
   "license": "MIT",
   "private": true,
@@ -17,24 +17,24 @@
     "lint": "tslint 'src/**/*.{ts, tsx}'"
   },
   "devDependencies": {
-    "@types/chrome": "^0.0.78",
+    "@types/chrome": "^0.0.86",
     "@types/classnames": "^2.2.7",
     "@types/lodash": "^4.14.121",
-    "@types/node": "^10.12.19",
+    "@types/node": "^12.0.10",
     "@types/react": "^16.7.22",
     "@types/react-dom": "^16.0.11",
     "@types/react-redux": "^7.0.1",
-    "css-loader": "^1.0.1",
+    "css-loader": "^3.0.0",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.11.0",
-    "null-loader": "^0.1.1",
+    "null-loader": "^3.0.0",
     "prettier": "^1.16.4",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
-    "ts-loader": "^5.3.3",
+    "ts-loader": "^6.0.4",
     "tslint": "^5.12.1",
     "tslint-config-airbnb": "^5.11.1",
-    "tslint-react": "^3.6.0",
+    "tslint-react": "^4.0.0",
     "typescript": "^3.2.4",
     "typings-for-css-modules-loader": "^1.7.0",
     "webpack": "^4.29.0",
@@ -47,15 +47,15 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.12",
     "@fortawesome/free-solid-svg-icons": "^5.6.3",
     "@fortawesome/react-fontawesome": "^0.1.4",
-    "@material-ui/core": "^3.9.1",
-    "@material-ui/styles": "^3.0.0-alpha.9",
+    "@material-ui/core": "^4.1.3",
+    "@material-ui/styles": "^4.1.2",
     "classnames": "^2.2.6",
     "immutable": "^4.0.0-rc.12",
     "lodash": "^4.17.11",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-iframe": "^1.3.3",
-    "react-redux": "^6.0.0",
+    "react-redux": "^7.1.0",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
     "redux-persist": "^5.10.0",
