--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@types/react": "^16.7.22",
     "@types/react-dom": "^16.0.11",
     "@types/react-redux": "^7.0.1",
-    "css-loader": "^3.0.0",
+    "css-loader": "1.0.1",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.11.0",
     "null-loader": "^3.0.0",
