Switch to WebExtension API to fix compatibility problem with FireFox, fix #46
Signed-off-by: Harry Chen <i@harrychen.xyz>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
         "experimentalDecorators": true,
         "allowSyntheticDefaultImports": true,
         "esModuleInterop": true,
-        "noImplicitThis": true
+        "noImplicitThis": true,
+        "typeRoots": ["node_modules/@types", "node_modules/web-ext-types"]
     }
 }
