--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/react": "^16.7.22",
     "@types/react-dom": "^16.0.11",
     "@types/react-redux": "^7.0.1",
+    "copy-webpack-plugin": "^5.0.3",
     "css-loader": "1.0.1",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.11.0",
@@ -37,6 +38,7 @@
     "tslint-react": "^4.0.0",
     "typescript": "^3.2.4",
     "typings-for-css-modules-loader": "^1.7.0",
+    "web-ext-types": "^3.1.0",
     "webpack": "^4.29.0",
     "webpack-bundle-analyzer": "^3.0.3",
     "webpack-cli": "^3.2.1",
@@ -59,9 +61,10 @@
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
     "redux-persist": "^5.10.0",
-    "redux-persist-chrome-storage": "^1.0.1",
     "redux-persist-transform-immutable": "^5.0.0",
+    "redux-persist-webextension-storage": "^1.0.2",
     "redux-thunk": "^2.3.0",
-    "thu-learn-lib": "^1.0.14"
+    "thu-learn-lib": "^1.0.14",
+    "webextension-polyfill": "^0.4.0"
   }
 }
