--- a/package.json
+++ b/package.json
@@ -25,32 +25,32 @@
     "@types/react-dom": "^16.0.11",
     "@types/react-redux": "^7.0.1",
     "copy-webpack-plugin": "^5.0.3",
-    "css-loader": "1.0.1",
+    "css-loader": "^3.4.0",
+    "css-modules-typescript-loader": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
-    "node-sass": "^4.11.0",
+    "node-sass": "^4.13.0",
     "null-loader": "^3.0.0",
-    "prettier": "^1.16.4",
-    "sass-loader": "^7.1.0",
-    "style-loader": "^0.23.1",
+    "prettier": "^1.19.1",
+    "sass-loader": "^8.0.0",
+    "style-loader": "^1.1.2",
     "ts-loader": "^6.0.4",
-    "tslint": "^5.12.1",
+    "tslint": "^5.20.1",
     "tslint-config-airbnb": "^5.11.1",
-    "tslint-react": "^4.0.0",
-    "typescript": "^3.2.4",
-    "typings-for-css-modules-loader": "^1.7.0",
-    "web-ext-types": "^3.1.0",
-    "webpack": "^4.29.0",
-    "webpack-bundle-analyzer": "^3.0.3",
-    "webpack-cli": "^3.2.1",
-    "webpack-dev-server": "^3.1.14",
-    "webpack-merge": "^4.2.1"
+    "tslint-react": "^4.1.0",
+    "typescript": "^3.7.4",
+    "web-ext-types": "^3.2.1",
+    "webpack": "^4.41.5",
+    "webpack-bundle-analyzer": "^3.6.0",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.10.1",
+    "webpack-merge": "^4.2.2"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.12",
     "@fortawesome/free-solid-svg-icons": "^5.6.3",
     "@fortawesome/react-fontawesome": "^0.1.4",
-    "@material-ui/core": "^4.1.3",
-    "@material-ui/styles": "^4.1.2",
+    "@material-ui/core": "4.1.3",
+    "@material-ui/styles": "4.1.2",
     "classnames": "^2.2.6",
     "immutable": "^4.0.0-rc.12",
     "lodash": "^4.17.11",
