--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@types/chrome": "^0.0.86",
     "@types/classnames": "^2.2.7",
+    "@types/firefox-webext-browser": "^70.0.1",
     "@types/lodash": "^4.14.121",
     "@types/node": "^12.0.10",
     "@types/react": "^16.7.22",
@@ -37,7 +38,6 @@
     "tslint-config-airbnb": "^5.11.1",
     "tslint-react": "^4.1.0",
     "typescript": "^3.7.4",
-    "web-ext-types": "^3.2.1",
     "webpack": "^4.41.5",
     "webpack-bundle-analyzer": "^3.6.0",
     "webpack-cli": "^3.3.10",
