--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
         "target": "es2017",
-        "module": "commonjs",
+        "module": "esnext",
         "moduleResolution": "node",
         "rootDir": "src",
         "outDir": "dist/js",
