Use a version that could be recognized on all platforms
Signed-off-by: Harry Chen <i@harrychen.xyz>

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "learn-helper",
-  "version": "4.2.1r3",
+  "version": "4.2.1.3",
   "author": "xxr3376 & Harry Chen",
   "license": "MIT",
   "private": true,
