--- a/package.json
+++ b/package.json
@@ -9,50 +9,57 @@
     "url": "https://github.com/xxr3376/Learn-Project"
   },
   "scripts": {
-    "format": "prettier --write \"src/**/*.ts\" \"src/**/*.tsx\" \"src/**/*.js\"",
+    "format": "prettier --write \"src/**/*.ts\" \"src/**/*.tsx\" \"src/**/*.js\" \"src/**/*.jsx\"",
     "build": "webpack --config webpack.prod.js",
     "dev-build": "webpack --config webpack.dev.js",
     "dev-watch": "webpack -w --config webpack.dev.js",
-    "lint": "tslint --fix --project tsconfig.json"
+    "lint": "eslint ."
   },
   "devDependencies": {
     "@types/classnames": "^2.2.10",
-    "@types/firefox-webext-browser": "^78.0.1",
+    "@types/firefox-webext-browser": "^82.0.0",
     "@types/lodash": "^4.14.161",
     "@types/node": "^14.10.1",
-    "@types/react": "^16.9.49",
-    "@types/react-dom": "^16.9.8",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.9",
-    "copy-webpack-plugin": "^6.1.0",
+    "@typescript-eslint/eslint-plugin": "^4.14.0",
+    "@typescript-eslint/parser": "^4.14.0",
+    "copy-webpack-plugin": "^7.0.0",
     "css-loader": "^3.4.0",
     "css-modules-typescript-loader": "^4.0.0",
-    "html-webpack-plugin": "^4.4.1",
-    "node-sass": "^4.14.1",
+    "eslint": "^7.18.0",
+    "eslint-config-airbnb-typescript": "^12.0.0",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "html-webpack-plugin": "^5.0.0-alpha.3",
+    "node-polyfill-webpack-plugin": "^1.0.2",
+    "node-sass": "^5.0.0",
     "null-loader": "^4.0.0",
     "prettier": "^2.1.1",
     "sass-loader": "^10.0.2",
-    "style-loader": "^1.2.1",
+    "style-loader": "^2.0.0",
     "ts-loader": "^8.0.3",
-    "tslint": "^6.1.3",
-    "tslint-config-airbnb": "^5.11.1",
-    "tslint-react": "^5.0.0",
-    "typescript": "^4.0.2",
-    "webpack": "^4.44.1",
-    "webpack-bundle-analyzer": "^3.8.0",
-    "webpack-cli": "^3.3.12",
+    "typescript": "^4.1.3",
+    "webpack": "^5.15.0",
+    "webpack-bundle-analyzer": "^4.3.0",
+    "webpack-cli": "^4.3.1",
     "webpack-merge": "^5.1.4"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fortawesome/react-fontawesome": "^0.1.11",
-    "@material-ui/core": "4.11.0",
-    "@material-ui/styles": "4.10.0",
+    "@material-ui/core": "4.11.2",
+    "@material-ui/styles": "4.11.2",
     "classnames": "^2.2.6",
     "immutable": "^4.0.0-rc.12",
     "lodash": "^4.17.20",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-iframe": "^1.3.3",
     "react-redux": "^7.2.1",
     "redux": "^4.0.1",
@@ -61,10 +68,8 @@
     "redux-persist-transform-immutable": "^5.0.0",
     "redux-persist-webextension-storage": "^1.0.2",
     "redux-thunk": "^2.3.0",
-    "thu-learn-lib": "^2.3.0",
-    "webextension-polyfill": "^0.6.0"
+    "thu-learn-lib": "^2.4.1",
+    "webextension-polyfill": "^0.7.0"
   },
-  "resolutions": {
-    "entities": "1.1.1"
-  }
+  "resolutions": {}
 }
