--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "git-revision-webpack-plugin": "^3.0.6",
     "html-webpack-plugin": "^5.0.0-alpha.3",
     "node-polyfill-webpack-plugin": "^1.0.2",
     "node-sass": "^5.0.0",
