--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "repository": {
     "type": "git",
-    "url": "https://github.com/xxr3376/Learn-Project"
+    "url": "https://github.com/Harry-Chen/Learn-Helper"
   },
   "scripts": {
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.tsx\" \"src/**/*.js\"",
@@ -16,61 +16,61 @@
     "lint": "eslint ."
   },
   "devDependencies": {
-    "@types/classnames": "^2.2.10",
+    "@types/classnames": "^2.3.1",
     "@types/firefox-webext-browser": "^82.0.0",
-    "@types/lodash": "^4.14.161",
-    "@types/node": "^14.10.1",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "@types/react-redux": "^7.1.9",
-    "@typescript-eslint/eslint-plugin": "^4.14.0",
-    "@typescript-eslint/parser": "^4.14.0",
-    "copy-webpack-plugin": "^7.0.0",
+    "@types/lodash": "^4.14.170",
+    "@types/node": "^15.12.2",
+    "@types/react": "^17.0.11",
+    "@types/react-dom": "^17.0.7",
+    "@types/react-redux": "^7.1.16",
+    "@typescript-eslint/eslint-plugin": "^4.26.1",
+    "@typescript-eslint/parser": "^4.26.1",
+    "copy-webpack-plugin": "^9.0.0",
     "css-loader": "^3.4.0",
     "css-modules-typescript-loader": "^4.0.0",
-    "eslint": "^7.18.0",
-    "eslint-config-airbnb-typescript": "^12.0.0",
-    "eslint-config-prettier": "^7.2.0",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint": "^7.28.0",
+    "eslint-config-airbnb-typescript": "^12.3.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "git-revision-webpack-plugin": "^3.0.6",
-    "html-webpack-plugin": "^5.0.0-alpha.3",
-    "node-polyfill-webpack-plugin": "^1.0.2",
-    "node-sass": "^5.0.0",
+    "git-revision-webpack-plugin": "^5.0.0",
+    "html-webpack-plugin": "^5.3.1",
+    "node-polyfill-webpack-plugin": "^1.1.2",
+    "node-sass": "^6.0.0",
     "null-loader": "^4.0.0",
-    "prettier": "^2.1.1",
-    "sass-loader": "^10.0.2",
+    "prettier": "^2.3.1",
+    "sass-loader": "^12.1.0",
     "style-loader": "^2.0.0",
-    "ts-loader": "^8.0.3",
-    "typescript": "^4.1.3",
-    "webpack": "^5.15.0",
-    "webpack-bundle-analyzer": "^4.3.0",
-    "webpack-cli": "^4.3.1",
-    "webpack-merge": "^5.1.4"
+    "ts-loader": "^9.2.3",
+    "typescript": "^4.3.2",
+    "webpack": "^5.38.1",
+    "webpack-bundle-analyzer": "^4.4.2",
+    "webpack-cli": "^4.7.2",
+    "webpack-merge": "^5.8.0"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.30",
-    "@fortawesome/free-solid-svg-icons": "^5.14.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.11",
-    "@material-ui/core": "4.11.2",
-    "@material-ui/styles": "4.11.2",
-    "classnames": "^2.2.6",
+    "@material-ui/core": "4.11.4",
+    "@material-ui/styles": "4.11.4",
+    "classnames": "^2.3.1",
     "immutable": "^4.0.0-rc.12",
-    "lodash": "^4.17.20",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "lodash": "^4.17.21",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-iframe": "^1.3.3",
-    "react-redux": "^7.2.1",
-    "redux": "^4.0.1",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.0",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "redux-persist-transform-immutable": "^5.0.0",
     "redux-persist-webextension-storage": "^1.0.2",
     "redux-thunk": "^2.3.0",
-    "thu-learn-lib": "^2.4.1",
-    "webextension-polyfill": "^0.7.0"
+    "thu-learn-lib": "^2.4.2",
+    "webextension-polyfill": "^0.8.0"
   },
   "resolutions": {}
 }
