--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@typescript-eslint/eslint-plugin": "^4.26.1",
     "@typescript-eslint/parser": "^4.26.1",
     "copy-webpack-plugin": "^9.0.0",
-    "css-loader": "^3.4.0",
+    "css-loader": "^5.2.6",
     "css-modules-typescript-loader": "^4.0.0",
     "eslint": "^7.28.0",
     "eslint-config-airbnb-typescript": "^12.3.1",
@@ -38,10 +38,8 @@
     "git-revision-webpack-plugin": "^5.0.0",
     "html-webpack-plugin": "^5.3.1",
     "node-polyfill-webpack-plugin": "^1.1.2",
-    "node-sass": "^6.0.0",
     "null-loader": "^4.0.0",
     "prettier": "^2.3.1",
-    "sass-loader": "^12.1.0",
     "style-loader": "^2.0.0",
     "ts-loader": "^9.2.3",
     "typescript": "^4.3.2",
@@ -72,5 +70,7 @@
     "thu-learn-lib": "^2.4.2",
     "webextension-polyfill": "^0.8.0"
   },
-  "resolutions": {}
+  "resolutions": {
+    "css-what": "^5.0.1"
+  }
 }
