Add randomstring to generate method name
Signed-off-by: Harry Chen <i@harrychen.xyz>

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "node-polyfill-webpack-plugin": "^1.1.4",
     "null-loader": "^4.0.0",
     "prettier": "^2.3.2",
+    "randomstring": "^1.2.1",
     "remove-files-webpack-plugin": "^1.4.5",
     "style-loader": "^2.0.0",
     "ts-loader": "^9.2.5",
