--- a/package.json
+++ b/package.json
@@ -18,26 +18,26 @@
   },
   "devDependencies": {
     "@types/classnames": "^2.3.1",
-    "@types/firefox-webext-browser": "^82.0.1",
-    "@types/lodash": "^4.14.173",
-    "@types/node": "^16.9.4",
-    "@types/react": "^17.0.22",
-    "@types/react-dom": "^17.0.9",
-    "@types/react-redux": "^7.1.18",
-    "@typescript-eslint/eslint-plugin": "^4.31.2",
-    "@typescript-eslint/parser": "^4.31.2",
+    "@types/firefox-webext-browser": "^94.0.0",
+    "@types/lodash": "^4.14.176",
+    "@types/node": "^16.11.6",
+    "@types/react": "^17.0.34",
+    "@types/react-dom": "^17.0.11",
+    "@types/react-redux": "^7.1.20",
+    "@typescript-eslint/eslint-plugin": "^5.3.0",
+    "@typescript-eslint/parser": "^5.3.0",
     "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^5.2.6",
     "css-modules-typescript-loader": "^4.0.0",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb-typescript": "^14.0.0",
+    "eslint": "^8.1.0",
+    "eslint-config-airbnb-typescript": "^14.0.2",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.26.0",
+    "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "git-revision-webpack-plugin": "^5.0.0",
-    "html-webpack-plugin": "^5.3.2",
+    "html-webpack-plugin": "^5.5.0",
     "node-polyfill-webpack-plugin": "^1.1.4",
     "null-loader": "^4.0.0",
     "prettier": "^2.4.1",
@@ -45,34 +45,33 @@
     "remove-files-webpack-plugin": "^1.4.5",
     "style-loader": "^2.0.0",
     "ts-loader": "^9.2.6",
-    "typescript": "^4.4.2",
-    "webpack": "^5.53.0",
-    "webpack-bundle-analyzer": "^4.4.2",
-    "webpack-cli": "^4.8.0",
+    "typescript": "^4.4.4",
+    "webpack": "^5.61.0",
+    "webpack-bundle-analyzer": "^4.5.0",
+    "webpack-cli": "^4.9.1",
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@fortawesome/react-fontawesome": "^0.1.15",
+    "@fortawesome/react-fontawesome": "^0.1.16",
     "@material-ui/core": "4.12.3",
     "@material-ui/styles": "4.11.4",
     "classnames": "^2.3.1",
-    "immutable": "^4.0.0-rc.15",
+    "immutable": "^4.0.0",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-iframe": "^1.3.3",
-    "react-redux": "^7.2.4",
-    "redux": "^4.1.1",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "redux-persist-transform-immutable": "^5.0.0",
     "redux-persist-webextension-storage": "^1.0.2",
-    "redux-thunk": "^2.3.0",
-    "thu-learn-lib": "^2.5.0",
+    "redux-thunk": "^2.4.0",
+    "thu-learn-lib": "^2.5.4",
     "webextension-polyfill": "^0.8.0"
   },
-  "resolutions": {
-  }
+  "resolutions": {}
 }
