--- a/package.json
+++ b/package.json
@@ -47,11 +47,12 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
-    "@material-ui/core": "4.12.3",
-    "@material-ui/styles": "4.11.4",
+    "@mui/material": "^5.5.2",
     "classnames": "^2.3.1",
     "compare-versions": "^4.1.3",
     "immutable": "^4.0.0",
