--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,9 +8,9 @@ jobs:
         if: "!contains(github.event.head_commit.message, 'ci skip')"
         steps:
             - uses: actions/checkout@v2
-            - uses: actions/setup-node@v2-beta
+            - uses: actions/setup-node@v3
               with:
-                node-version: '12'
+                node-version: '18'
             - name: Install dependencies
               run: yarn install --frozen-lockfile
             - name: Build dev version
