Fix compilation errors
Signed-off-by: Harry Chen <i@harrychen.xyz>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         "target": "es2018",
         "module": "esnext",
-        "moduleResolution": "node",
+        "moduleResolution": "bundler",
         "rootDir": "src",
         "outDir": "dist/js",
         "sourceMap": true,
