--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "compare-versions": "^6.0.0",
     "immutable": "^4.3.1",
     "lodash": "^4.17.21",
+    "material-ui-popup-state": "^5.0.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-iframe": "^1.8.5",
