--- a/package.json
+++ b/package.json
@@ -25,12 +25,11 @@
     "@types/randomstring": "^1.1.8",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
-    "@types/react-redux": "^7.1.25",
+    "@types/redux-logger": "^3.0.9",
     "@types/webextension-polyfill": "^0.10.1",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
-    "css-modules-typescript-loader": "^4.0.1",
     "eslint": "^8.45.0",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.32.2",
@@ -40,7 +39,6 @@
     "rollup-plugin-visualizer": "^5.9.2",
     "typescript": "^5.1.6",
     "vite": "^4.4.4",
-    "vite-plugin-chunk-split": "^0.4.7",
     "web-ext": "^7.6.2"
   },
   "dependencies": {
@@ -50,21 +48,15 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/material": "^5.14.0",
+    "@reduxjs/toolkit": "^1.9.5",
     "classnames": "^2.3.2",
     "compare-versions": "^6.0.0",
-    "immutable": "^4.3.1",
-    "lodash": "^4.17.21",
     "material-ui-popup-state": "^5.0.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-iframe": "^1.8.5",
-    "react-redux": "^8.1.1",
-    "redux": "^4.2.1",
+    "react-redux": "^8.1.2",
     "redux-logger": "^3.0.6",
-    "redux-persist": "^6.0.0",
-    "redux-persist-transform-immutable": "^5.0.0",
-    "redux-persist-webextension-storage": "^1.0.2",
-    "redux-thunk": "^2.4.2",
     "thu-learn-lib": "^3.0.4",
     "webextension-polyfill": "^0.10.0"
   },
