--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,17 +13,14 @@
   "parserOptions": {
     "ecmaVersion": 12,
     "sourceType": "module",
-    "project": [
-      "tsconfig.eslint.json"
-    ]
+    "project": ["tsconfig.eslint.json"]
   },
-  "plugins": [
-    "@typescript-eslint",
-    "jsx-a11y",
-    "react"
-  ],
+  "plugins": ["@typescript-eslint", "jsx-a11y", "react"],
   "rules": {
-    "@typescript-eslint/no-unused-vars": ["error", { "argsIgnorePattern": "^_" }]
+    "@typescript-eslint/no-unused-vars": [
+      "warn",
+      { "argsIgnorePattern": "^_", "varsIgnorePattern": "^_" }
+    ]
   },
   "settings": {
     "react": {
