--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "eslint-plugin-react": "^7.32.2",
     "prettier": "^2.8.0",
     "randomstring": "^1.3.0",
-    "rollup-plugin-ignore": "^1.0.10",
     "rollup-plugin-visualizer": "^5.9.2",
     "typescript": "^5.1.6",
     "vite": "^4.4.4",
@@ -52,8 +51,10 @@
     "classnames": "^2.3.2",
     "compare-versions": "^6.0.0",
     "material-ui-popup-state": "^5.0.9",
+    "proxy-memoize": "^2.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.11",
     "react-iframe": "^1.8.5",
     "react-redux": "^8.1.2",
     "redux-logger": "^3.0.6",
