--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-react": "^7.32.2",
     "prettier": "^2.8.0",
     "randomstring": "^1.3.0",
+    "rollup-plugin-strip-banner": "^3.0.0",
     "rollup-plugin-visualizer": "^5.9.2",
     "typescript": "^5.1.6",
     "vite": "^4.4.4",
