feat: snackbar via notistack

--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "compare-versions": "^6.0.0",
     "fake-parse5": "^0.0.1",
     "material-ui-popup-state": "^5.0.9",
+    "notistack": "^3.0.1",
     "proxy-memoize": "^2.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
