--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "url": "https://github.com/Harry-Chen/Learn-Helper"
   },
   "scripts": {
-    "dev": "yarn serve:chrome & vite",
+    "dev": "vite",
     "build:chrome": "vite build",
     "build:firefox": "BROWSER=firefox vite build",
     "serve:chrome": "web-ext run -t chromium --start-url \"https://example.com\" --source-dir ./dist/",
@@ -19,6 +19,7 @@
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.tsx\" \"src/**/*.js\" \"./*.js\""
   },
   "devDependencies": {
+    "@mdx-js/rollup": "^2.3.0",
     "@samrum/vite-plugin-web-extension": "^5.0.0",
     "@types/lodash": "^4.14.195",
     "@types/node": "^18.11.11",
@@ -35,6 +36,8 @@
     "eslint-plugin-react": "^7.32.2",
     "prettier": "^2.8.0",
     "randomstring": "^1.3.0",
+    "remark-mdx-images": "^2.0.0",
+    "remark-unwrap-images": "^3.0.1",
     "rollup-plugin-strip-banner": "^3.0.0",
     "rollup-plugin-visualizer": "^5.9.2",
     "typescript": "^5.1.6",
