--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "scripts": {
     "dev": "vite",
+    "build:dev": "NODE_ENV=development vite build",
     "build:chrome": "vite build",
     "build:firefox": "BROWSER=firefox vite build",
     "serve:chrome": "web-ext run -t chromium --start-url \"https://example.com\" --source-dir ./dist/",
@@ -38,10 +39,11 @@
     "randomstring": "^1.3.0",
     "remark-mdx-images": "^2.0.0",
     "remark-unwrap-images": "^3.0.1",
-    "rollup-plugin-strip-banner": "^3.0.0",
     "rollup-plugin-visualizer": "^5.9.2",
+    "terser": "^5.19.4",
     "typescript": "^5.1.6",
     "vite": "^4.4.4",
+    "vite-plugin-zip-pack": "^1.0.6",
     "web-ext": "^7.6.2"
   },
   "dependencies": {
