--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
     "notistack": "^3.0.1",
     "preact": "^10.17.1",
     "proxy-memoize": "^2.0.4",
+    "react": "npm:@preact/compat",
+    "react-dom": "npm:@preact/compat",
     "react-error-boundary": "^4.0.11",
     "react-iframe": "^1.8.5",
     "react-redux": "^8.1.2",
