--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
   },
   "devDependencies": {
     "@lingui/cli": "^4.5.0",
-    "@lingui/swc-plugin": "^4.0.4",
     "@lingui/vite-plugin": "^4.5.0",
     "@mdx-js/rollup": "^2.3.0",
     "@preact/preset-vite": "^2.5.0",
     "@samrum/vite-plugin-web-extension": "^5.0.0",
+    "@types/babel__core": "^7.20.2",
     "@types/lodash": "^4.14.195",
     "@types/node": "^18.11.11",
     "@types/randomstring": "^1.1.8",
@@ -37,6 +37,7 @@
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react-swc": "^3.3.2",
+    "babel-plugin-macros": "^3.1.0",
     "eslint": "^8.45.0",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.32.2",
