--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@types/webextension-polyfill": "^0.10.7",
     "@typescript-eslint/eslint-plugin": "^7.4.0",
     "@typescript-eslint/parser": "^7.4.0",
-    "@vitejs/plugin-react-swc": "^3.6.0",
+    "@vitejs/plugin-react-swc": "3.5.0",
     "eslint": "^8.57.0",
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-react": "^7.34.1",
@@ -76,5 +76,8 @@
     "thu-learn-lib": "^3.1.4",
     "webextension-polyfill": "^0.10.0"
   },
-  "resolutions": {}
+  "resolutions": {
+    "@vitejs/plugin-react-swc": "3.5.0",
+    "@swc/core": "1.3.96"
+  }
 }
