--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "devDependencies": {
     "@lingui/cli": "^4.7.2",
-    "@lingui/swc-plugin": "^4.0.6",
+    "@lingui/swc-plugin": "^4.0.7",
     "@lingui/vite-plugin": "^4.7.2",
     "@mdx-js/rollup": "^3.0.1",
     "@samrum/vite-plugin-web-extension": "^5.1.0",
@@ -36,7 +36,7 @@
     "@types/webextension-polyfill": "^0.10.7",
     "@typescript-eslint/eslint-plugin": "^7.4.0",
     "@typescript-eslint/parser": "^7.4.0",
-    "@vitejs/plugin-react-swc": "3.5.0",
+    "@vitejs/plugin-react-swc": "^3.6.0",
     "eslint": "^8.57.0",
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-react": "^7.34.1",
@@ -77,8 +77,6 @@
     "webextension-polyfill": "^0.10.0"
   },
   "resolutions": {
-    "@vitejs/plugin-react-swc": "3.5.0",
-    "@swc/core": "1.3.96",
     "web-ext/sign-addon": "6.4.0",
     "web-ext/jose": "5.2.3"
   }
