--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "remark-mdx-images": "^3.0.0",
     "remark-unwrap-images": "^4.0.0",
     "rollup-plugin-visualizer": "^5.12.0",
+    "rollup-preserve-directives": "^1.1.1",
     "terser": "^5.30.0",
     "typescript": "^5.4.3",
     "unplugin-icons": "^0.18.5",
