--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "url": "https://github.com/Harry-Chen/Learn-Helper"
   },
   "scripts": {
-    "dev": "vite",
-    "build:dev": "NODE_ENV=development vite build",
-    "build:chrome": "vite build",
-    "build:firefox": "BROWSER=firefox vite build",
-    "serve:chrome": "web-ext run -t chromium --start-url \"https://example.com\" --source-dir ./dist/",
-    "serve:firefox": "web-ext run --start-url \"about:debugging#/runtime/this-firefox\"  --source-dir ./dist/",
+    "dev": "wxt",
+    "build:chrome": "wxt build",
+    "build:firefox": "wxt build -b firefox",
+    "zip:chrome": "wxt zip",
+    "zip:firefox": "wxt zip -b firefox",
+    "postinstall": "wxt prepare",
     "lint": "eslint .",
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.tsx\"",
     "lingui:extract": "lingui extract"
@@ -25,7 +25,6 @@
     "@lingui/swc-plugin": "^4.0.7",
     "@lingui/vite-plugin": "^4.7.2",
     "@mdx-js/rollup": "^3.0.1",
-    "@samrum/vite-plugin-web-extension": "^5.1.0",
     "@svgr/core": "^8.1.0",
     "@svgr/plugin-jsx": "^8.1.0",
     "@types/node": "^20.11.30",
@@ -33,7 +32,6 @@
     "@types/react": "^18.2.73",
     "@types/react-dom": "^18.2.23",
     "@types/redux-logger": "^3.0.13",
-    "@types/webextension-polyfill": "^0.10.7",
     "@typescript-eslint/eslint-plugin": "^7.4.0",
     "@typescript-eslint/parser": "^7.4.0",
     "@vitejs/plugin-react-swc": "^3.6.0",
@@ -44,14 +42,11 @@
     "randomstring": "^1.3.0",
     "remark-mdx-images": "^3.0.0",
     "remark-unwrap-images": "^4.0.0",
-    "rollup-plugin-visualizer": "^5.12.0",
     "rollup-preserve-directives": "^1.1.1",
     "terser": "^5.30.0",
     "typescript": "^5.4.3",
     "unplugin-icons": "^0.18.5",
-    "vite": "^4.5.3",
-    "vite-plugin-zip-pack": "^1.2.2",
-    "web-ext": "^8.0.0"
+    "wxt": "^0.18.9"
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
@@ -74,8 +69,7 @@
     "react-iframe": "^1.8.5",
     "react-redux": "^9.1.0",
     "redux-logger": "^3.0.6",
-    "thu-learn-lib": "^3.1.4",
-    "webextension-polyfill": "^0.10.0"
+    "thu-learn-lib": "^3.1.4"
   },
   "resolutions": {
     "mlly": "1.7.0"
