--- a/package.json
+++ b/package.json
@@ -21,57 +21,57 @@
     "lingui:extract": "lingui extract"
   },
   "devDependencies": {
-    "@lingui/cli": "^4.7.2",
-    "@lingui/swc-plugin": "^4.0.7",
-    "@lingui/vite-plugin": "^4.7.2",
+    "@lingui/cli": "^4.11.1",
+    "@lingui/swc-plugin": "^4.0.8",
+    "@lingui/vite-plugin": "^4.11.1",
     "@mdx-js/rollup": "^3.0.1",
     "@svgr/core": "^8.1.0",
     "@svgr/plugin-jsx": "^8.1.0",
-    "@types/node": "^20.11.30",
-    "@types/randomstring": "^1.1.12",
-    "@types/react": "^18.2.73",
-    "@types/react-dom": "^18.2.23",
+    "@types/node": "^20.14.9",
+    "@types/randomstring": "^1.3.0",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "@types/redux-logger": "^3.0.13",
-    "@typescript-eslint/eslint-plugin": "^7.4.0",
-    "@typescript-eslint/parser": "^7.4.0",
-    "@vitejs/plugin-react-swc": "^3.6.0",
+    "@types/webextension-polyfill": "^0.10.7",
+    "@typescript-eslint/eslint-plugin": "^7.14.1",
+    "@typescript-eslint/parser": "^7.14.1",
+    "@vitejs/plugin-react-swc": "^3.7.0",
     "eslint": "^8.57.0",
-    "eslint-plugin-jsx-a11y": "^6.8.0",
-    "eslint-plugin-react": "^7.34.1",
-    "prettier": "^3.2.5",
+    "eslint-plugin-jsx-a11y": "^6.9.0",
+    "eslint-plugin-react": "^7.34.3",
+    "prettier": "^3.3.2",
     "randomstring": "^1.3.0",
     "remark-mdx-images": "^3.0.0",
     "remark-unwrap-images": "^4.0.0",
     "rollup-preserve-directives": "^1.1.1",
-    "terser": "^5.30.0",
-    "typescript": "^5.4.3",
-    "unplugin-icons": "^0.18.5",
-    "wxt": "^0.18.9"
+    "terser": "^5.31.1",
+    "typescript": "^5.5.2",
+    "unplugin-icons": "^0.19.0",
+    "vite-plugin-chunk-split": "^0.5.0",
+    "wxt": "^0.18.10"
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.0",
-    "@iconify-json/fa6-solid": "^1.1.20",
-    "@lingui/core": "^4.7.2",
-    "@lingui/macro": "^4.7.2",
-    "@lingui/react": "^4.7.2",
-    "@mui/material": "^5.15.14",
-    "@reduxjs/toolkit": "^2.2.2",
+    "@emotion/styled": "^11.11.5",
+    "@iconify-json/fa6-solid": "^1.1.21",
+    "@lingui/core": "^4.11.1",
+    "@lingui/macro": "^4.11.1",
+    "@lingui/react": "^4.11.1",
+    "@mui/material": "^5.15.20",
+    "@reduxjs/toolkit": "^2.2.5",
     "classnames": "^2.5.1",
     "compare-versions": "^6.1.0",
     "fake-parse5": "^0.0.1",
-    "material-ui-popup-state": "^5.1.0",
+    "material-ui-popup-state": "^5.1.2",
     "notistack": "^3.0.1",
-    "proxy-memoize": "^2.0.5",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "proxy-memoize": "^3.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-error-boundary": "^4.0.13",
     "react-iframe": "^1.8.5",
-    "react-redux": "^9.1.0",
+    "react-redux": "^9.1.2",
     "redux-logger": "^3.0.6",
-    "thu-learn-lib": "^3.1.4"
-  },
-  "resolutions": {
-    "mlly": "1.7.0"
+    "thu-learn-lib": "^3.2.0",
+    "webextension-polyfill": "^0.12.0"
   }
 }
