--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@svgr/core": "^8.1.0",
     "@svgr/plugin-jsx": "^8.1.0",
     "@types/eslint__js": "^8.42.3",
+    "@types/mdx": "^2.0.13",
     "@types/node": "^20.14.9",
     "@types/randomstring": "^1.3.0",
     "@types/react": "^18.3.3",
