--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@generouted/react-router": "^1.19.5",
     "@iconify-json/fa6-solid": "^1.1.21",
     "@lingui/core": "^4.11.1",
     "@lingui/macro": "^4.11.1",
@@ -72,6 +73,7 @@
     "react-error-boundary": "^4.0.13",
     "react-iframe": "^1.8.5",
     "react-redux": "^9.1.2",
+    "react-router-dom": "^6.24.0",
     "redux-logger": "^3.0.6",
     "thu-learn-lib": "^3.2.0",
     "webextension-polyfill": "^0.12.0"
